2012-12-17  Gabor Rapcsanyi  <rgabor@webkit.org>

        Reduce the code size of ARM SIMD in GraphicsContext3D
        https://bugs.webkit.org/show_bug.cgi?id=105086

        Reviewed by Zoltan Herczeg.

        Reduce the code size of ARM SIMD in GraphicsContext3D and change the ARM
        namespace to SIMD.

        * platform/graphics/GraphicsContext3D.cpp:
        (WebCore):
        * platform/graphics/cpu/arm/GraphicsContext3DNEON.h:
        (WebCore::SIMD::unpackOneRowOfRGBA4444ToRGBA8):
        (WebCore::SIMD::packOneRowOfRGBA8ToUnsignedShort4444):
        (WebCore::SIMD::unpackOneRowOfRGBA5551ToRGBA8):
        (WebCore::SIMD::packOneRowOfRGBA8ToUnsignedShort5551):
        (WebCore::SIMD::unpackOneRowOfRGB565ToRGBA8):
        (WebCore::SIMD::packOneRowOfRGBA8ToUnsignedShort565):

2012-12-16  Andrey Kosyakov  <caseq@chromium.org>

        Web Inspector: frame bars on timeline do not react on hover and double click
        https://bugs.webkit.org/show_bug.cgi?id=105153

        Reviewed by Alexander Pavlov.

        Remove z-index: -100 from #timeline-grid-header, as it prevents mouse events from
        reaching frame strip. Use pointer-events: none on frame dividers instead.

        * inspector/front-end/timelinePanel.css:
        (.timeline .resources-event-divider.timeline-frame-divider):
        (#timeline-grid-header):

2012-12-16  Kentaro Hara  <haraken@chromium.org>

        [V8] Improve performance of a conversion from WebKit strings to V8 strings
        https://bugs.webkit.org/show_bug.cgi?id=105150

        Reviewed by Eric Seidel.

        V8 provides v8::Weak(isolate) and v8::Local::New(isolate, ...),
        which are much faster than v8::Weak() and v8::Local::New().
        By using the faster APIs, we can improve performance of a conversion
        from a WebKit string to a V8 string. This improves performance of
        div.id, div.className, ...and a lot of DOM attributes that return
        strings.

        [Dromaeo/dom-attr]